[package]
name = "fil_actor_evm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]
exclude = ["examples", ".github"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "8.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors.git", features = [
  "fil-actor",
] }
fvm_shared = { version = "0.7.0", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
num-traits = "0.2.14"
num-derive = "0.3.3"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"

# Ethereum VM support types
ethereum-types = "0.12"
evmodin = { git = "https://github.com/vorot93/evmodin.git", features = ["util"] }

[features]
fil-actor = []

[profile.wasm]
inherits = "release"
# This needs to be unwind, not abort, so that we can handle panics within our panic hook.
panic = "unwind"
overflow-checks = true
lto = "thin"
opt-level = "z"
