[package]
name = "fil_actor_evm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]
exclude = ["examples", ".github"]

[dependencies]
cid = { version = "0.8.5", default-features = false }
multihash = { version = "0.16.2", default-features = false }
fvm_sdk = { version = "1.0.0-rc.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_shared = { version = "0.7.0", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0"

# Ethereum VM support types
ethereum-types = "0.12"
evmodin = { git = "https://github.com/vorot93/evmodin.git", features = ["util"] }

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.37"
