[workspace]
resolver = "2"
members = ["bridge", "runtime", "shared", "tests"]
default-members = ["bridge", "runtime", "shared", "tests"]

# [patch.crates-io]
# fvm = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
# fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
# fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
# fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
# fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
# fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
# fvm_ipld_amt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
# fvm_ipld_car = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }

[patch.crates-io]
fvm = { path = "../ref-fvm/fvm" }
fvm_shared = { path = "../ref-fvm/shared" }
fvm_ipld_encoding = { path = "../ref-fvm/ipld/encoding" }
fvm_ipld_blockstore = { path = "../ref-fvm/ipld/blockstore" }
fvm_integration_tests = { path = "../ref-fvm/testing/integration" }
fvm_sdk = { path = "../ref-fvm/sdk" }
fvm_ipld_hamt = { path = "../ref-fvm/ipld/hamt" }
fvm_ipld_amt = { path = "../ref-fvm/ipld/amt" }
