[package]
name = "fvm-evm-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
doctest = false

[dependencies]
fvm_ipld_blockstore = { path = "../../ref-fvm/ipld/blockstore" }
fvm_ipld_encoding = { path = "../../ref-fvm/ipld/encoding" }
fvm_ipld_hamt = { path = "../../ref-fvm/ipld/hamt" }
fvm_sdk = { path = "../../ref-fvm/sdk" }
fvm_shared = { path = "../../ref-fvm/shared", default-features = false }
fil_actors_runtime = { path = "../../builtin-actors/runtime", features = [
  "fil-actor",
] }

fvm-evm = { path = "../shared" }

cid = { version = "0.8.5", default-features = false }
multihash = { version = "0.16.2", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5.1", default-features = false }

[build-dependencies]
wasm-builder = "3.0.1"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
hex = "0.4.3"

[features]
default = ["fil-actor"]
fil-actor = []
