[package]
name = "fvm-evm-registry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[dependencies]
cid = { version = "0.8.5", default-features = false }
multihash = { version = "0.16.2", default-features = false }
fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm" }
fvm_shared = { version = "0.7.1", default-features = false }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"
fvm_ipld_hamt = "0.5.1"
fil_actors_runtime = { path = "../../builtin-actors/actors/runtime", features = [
  "fil-actor",
] }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0"
num-traits = "0.2.15"
num-derive = "0.3.3"

fvm-evm = { path = "../shared" }

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.37"

[dev-dependencies]
fvm = { version = "1.0.0-rc.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_sdk = { version = "1.0.0-rc.1", git = "https://github.com/filecoin-project/ref-fvm" }
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.37.0"

[features]
default = ["fil-actor"]
fil-actor = []
