[package]
name = "fvm-evm-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
doctest = false

[dependencies]
fvm-evm = { path = "../shared", default-features = false }
anyhow = "1"
cid = { version = "0.8.5", default-features = false }
multihash = { version = "0.16.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
bytes = { version = "1.1.0", default-features = false }
num-traits = "0.2.15"
num-derive = "0.3.3"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
fvm_ipld_hamt = "0.5.1"
fvm_sdk = "1.0.0-rc.3"
fvm_shared = { version = "0.8.0", default-features = false }
fil_actors_runtime = { git = "https://github.com/filecoin-project/builtin-actors", features = ["fil-actor"] }


[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.37"

[dev-dependencies]
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.37.0"

[features]
default = ["fil-actor"]
fil-actor = []
