[package]
name = "fvm-evm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
doctest = false

[dependencies]
anyhow = "1"
serde_tuple = "0.5"
serde = { version = "1.0", features = ["derive"] }
fvm_ipld_hamt = "0.5.1"
cid = { version = "0.8.5", default-features = false }
uint = { version = "0.9.3", default-features = false }
impl-serde = { version = "0.3.2", default-features = false }
fixed-hash = { version = "0.7.0", default-features = false }
arrayvec = { version = "0.7.2", features = ["serde"] }
bytes = { version = "1.1.0", default-features = false }
derive_more = "0.99"
strum = "0.24"
strum_macros = "0.24"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"
sha3 = { version = "0.10", default-features = false }
fvm_sdk = { path = "../../ref-fvm/sdk" }
fvm_shared = { path = "../../ref-fvm/shared", default-features = false }
fil_actors_runtime = { git = "https://github.com/filecoin-project/builtin-actors.git", features = [
  "fil-actor",
] }
rlp = { version = "0.5.1", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
fvm_shared = { path = "../../ref-fvm/shared", default-features = false, features = [
  "crypto",
] }
