[package]
name = "fvm-evm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
doctest = false

[dependencies]
anyhow = "1"
serde_tuple = "0.5"
serde = { version = "1.0", features = ["derive"] }
cid = { version = "0.8.5", default-features = false }
uint = { version = "0.9.3", default-features = false }
impl-serde = { version = "0.3.2", default-features = false }
fixed-hash = { version = "0.7.0", default-features = false }
arrayvec = { version = "0.7.2", features = ["serde"] }
bytes = { version = "1.1.0", features = ["serde"], default-features = false }
derive_more = "0.99"
strum = "0.24"
strum_macros = "0.24"
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5.1", default-features = false }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
fvm_ipld_hamt = "0.5.1"
fvm_sdk = "1.0.0-rc.3"
fvm_shared = { version = "0.8.0", default-features = false }
fil_actors_runtime = { git = "https://github.com/filecoin-project/builtin-actors", features = ["fil-actor"] }

[dev-dependencies]
libsecp256k1 = { version = "0.7.0", features = ["static-context"] }
hex-literal = "0.3.4"
fvm_shared = { version = "0.8.0", default-features = false, features = ["crypto"] }
