[package]
name = "fvm-evm-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
doctest = false

[dependencies]
hex = "0.4.3"
anyhow = "1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
cid = { version = "0.8.5", default-features = false }
libsecp256k1 = { version = "0.7.0", features = ["static-context"] }
fvm-evm = { path = "../shared" }

fvm = { path = "../../ref-fvm/fvm", default-features = false }
fvm_shared = { path = "../../ref-fvm/shared" }
fvm_ipld_encoding = { path = "../../ref-fvm/ipld/encoding" }
fvm_ipld_blockstore = { path = "../../ref-fvm/ipld/blockstore" }
fvm_integration_tests = { path = "../../ref-fvm/testing/integration" }

[dependencies.wasmtime]
version = "0.37.0"
default-features = false
features = ["cranelift", "parallel-compilation"]

[features]
default = ["fvm/testing", "fvm_shared/testing"]
