[package]
name = "fvm-evm-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
doctest = false

[dependencies]
hex = "0.4.3"
anyhow = "1"
rand = "0.8.5"
sha3 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
cid = { version = "0.8.5", default-features = false }
libsecp256k1 = { version = "0.7.0", features = ["static-context"] }
fvm-evm = { path = "../shared" }
log = "0.4"
pretty_env_logger = "0.4"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
fvm_shared = { version = "0.8.0" }
fvm = { version = "2.0.0-alpha.1", default-features = false }
# We should do this with a patch, but we can't because it's not published to crates.io and
# https://github.com/rust-lang/cargo/issues/5478
#fvm_integration_tests = { git = "https://github.com/filecoin-project/ref-fvm", branch = "karim/recover-pubkey-syscall" }
fvm_integration_tests = { path = "../../ref-fvm/testing/integration" }

[dependencies.wasmtime]
version = "0.37.0"
default-features = false
features = ["cranelift", "parallel-compilation"]

[features]
default = ["fvm/testing", "fvm_shared/testing"]
